adding static public-view files support

--- a/avElection/verify-results-directive/verify-results-directive.html
+++ b/avElection/verify-results-directive/verify-results-directive.html
@@ -32,7 +32,7 @@
         <div class="con-xs-12 col-sm-8 col-sm-offset-2 padded-left padded-right">
           <div
           ng-if="electionState === 'results_ok'"
-          ng-i18next="[i18next:html]({title: election.title, electionId: election.id})avElection.verifyResults.verifyText">
+          ng-i18next="[i18next:html]({title: election.title, electionId: election.id, publicURL: publicURL})avElection.verifyResults.verifyText">
           </div>
           <div
           ng-if="electionState === 'loading'"
