--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
   <script src="avElection/layouts/default-election-directive/default-election-directive.js" class="app"></script>
   <script src="avElection/layouts/question-info-directive/question-info-directive.js" class="app"></script>
   <script src="avElection/layouts/simple-question-directive/simple-question-directive.js" class="app"></script>
+  <script src="avElection/layouts/public-view-directive/public-view-directive.js" class="app"></script>
 
   <!-- registration -->
   <script src="avRegistration/init.js" class="app"></script>
