--- a/avElection/verify-results-directive/verify-results-directive.html
+++ b/avElection/verify-results-directive/verify-results-directive.html
@@ -1,11 +1,14 @@
 <div class="basic-booth-layout">
-  <nav class="navbar navbar-default navbar-fixed-top" av-affix-top=".navbar-unfixed-top" role="navigation">
+  <nav
+    class="navbar navbar-default navbar-fixed-top"
+    ng-if="!noHeader"
+    av-affix-top=".navbar-unfixed-top" role="navigation">
     <div class="container">
       <div class="row avb-top-navbar">
         <div class="pull-left" ng-i18next="[html]avBooth.poweredBy">
         </div>
         <div class="pull-right">
-          <a href="#/election/{{electionId}}/verify-results" target="_blank">
+          <a href="#/election/{{electionId}}/public/verify-results" target="_blank">
             <span
               class="glyphicon glyphicon-share">
             </span>
@@ -16,12 +19,15 @@
     </div>
   </nav>
 
-  <div class="wrapper-unfixed">
+  <div class="wrapper-unfixed" ng-class="{'no-header': noHeader}">
     <div class="navbar-unfixed-top text-center">
       <div class="container">
         <div class="hidden unfixed-top-height"></div>
         <h1 ng-i18next="avElection.verifyResults.title"></h1>
-          <p ng-i18next="[i18next]({title: election.title})avElection.verifyResults.subtitle"></p>
+        <p
+          ng-if="!noHeader"
+          ng-i18next="[i18next]({title: election.title})avElection.verifyResults.subtitle">
+        </p>
       </div>
     </div>
   </div>
@@ -31,12 +37,12 @@
       <div class="row">
         <div class="con-xs-12 col-sm-8 col-sm-offset-2 padded-left padded-right">
           <div
-          ng-if="electionState === 'results_ok'"
+          ng-if="electionState === 'results_ok' || !!election"
           ng-i18next="[i18next:html]({title: election.title, electionId: election.id, publicURL: publicURL})avElection.verifyResults.verifyText">
           </div>
           <div
-          ng-if="electionState === 'loading'"
-          ng-i18next="[i18next]avElection.verifyResults.stateLoadingData">
+          ng-if="electionState === 'loading' && !!election"
+          ng-i18next="avElection.public.loadingDataText">
           </div>
           <div
           ng-if="!['loading', 'results_ok'].contains(electionState)"
