--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -9,6 +9,8 @@
           ng-click="launchHelp()">
         </span>
         <span ng-click="launchHelp()" ng-i18next="avBooth.helpTitle"></span>
+        <span class="dropdown left-padding" av-change-lang>
+        </span>
       </div>
     </div>
 
