--- a/avRegistration/register-directive/register-directive.html
+++ b/avRegistration/register-directive/register-directive.html
@@ -19,7 +19,7 @@
                 ng-i18next="avRegistration.registerButton"
                 ng-click="signUp(form.$valid)"
                 tabindex="{{register_fields.length+1}}"
-                ng-disabled="!form.$valid && !sendingData">
+                ng-disabled="!form.$valid || sendingData">
               </button>
           </div>
         </form>
