--- a/avElection/verify-results-directive/verify-results-directive.html
+++ b/avElection/verify-results-directive/verify-results-directive.html
@@ -35,7 +35,7 @@
   <div class="content avb-content">
     <div class="container">
       <div class="row">
-        <div class="con-xs-12 col-sm-8 col-sm-offset-2 padded-left padded-right">
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2 padded-left padded-right">
           <div
           ng-if="electionState === 'results_ok' || !!election"
           ng-i18next="[i18next:html]({title: election.title, electionId: election.id, publicURL: publicURL})avElection.verifyResults.verifyText">
