adding change lang dropdown selector to all voting booth screens

--- a/avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.html
+++ b/avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.html
@@ -11,6 +11,7 @@
           ng-click="launchHelp()">
         </span>
         <span ng-click="launchHelp()" ng-i18next="avBooth.helpTitle"></span>
+        <span class="dropdown left-padding" av-change-lang>
       </div>
     </div>
 
