--- a/avBooth/error-screen-directive/error-screen-directive.html
+++ b/avBooth/error-screen-directive/error-screen-directive.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-default navbar-fixed-top" av-affix-top=".navbar-unfixed-top" role="navigation">
   <div class="container">
     <div class="row avb-top-navbar">
+      <div class="pull-right">
+        <span class="dropdown left-padding" av-change-lang>
+      </div>
     </div>
   </div>
 </nav>
