--- a/avBooth/help-screen-directive/help-screen-directive.html
+++ b/avBooth/help-screen-directive/help-screen-directive.html
@@ -7,6 +7,7 @@
           class="glyphicon glyphicon-remove-sign"
           ng-click="backFromHelp()">
         </span>
+        <span class="dropdown left-padding" av-change-lang>
       </div>
     </div>
   </div>
