--- a/avBooth/success-screen-directive/success-screen-directive.html
+++ b/avBooth/success-screen-directive/success-screen-directive.html
@@ -35,7 +35,33 @@
 
 <div class="content avb-content">
   <div class="container">
-    <div class="padded" ng-bind-html="successText">
+    <div class="padded">
+      <p ng-i18next>
+        [html:i18next]({ballotHash: stateData.ballotHash, ballotLocatorUrl: "#/election/" +election.id + "/public/ballot-locator"})avBooth.successBallotHash
+      </p>
+      <p ng-i18next>avBooth.relatedLinksText</p>
+      <ul>
+        <li>
+          <a href="#/election/{{election.id}}/public/view/faqs.html" target="_blank" ng-i18next>avElection.public.faqsLink</a>
+        </li>
+        <li>
+          <a href="#/election/{{election.id}}/public/authorities" target="_blank" ng-i18next>avElection.public.authoritiesLink</a>
+        </li>
+        <li>
+          <a href="#/election/{{election.id}}/public/view/overview.html" target="_blank" ng-i18next>avElection.public.overviewLink</a>
+        </li>
+        <li>
+          <a href="/election/{{election.id}}/public/view/tech_overview.pdf" target="_blank" ng-i18next>avElection.public.technicalOverviewLink</a>
+        </li>
+      </ul>
+      <div ng-bind-html="successText">
+      </div>
+      <h2 class="text-center" ng-if="!!election.presentation.share_text">
+        <a
+          href="{{'https://twitter.com/intent/tweet?text=' + encodeURIComponent(election.presentation.share_text) + '&source=webclient'}}"
+          target="_blank">
+        </a>
+      </h2>
     </div>
   </div>
 </div>
