--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   <script src="avUi/inside-iframe-service.js" class="app"></script>
   <script src="avUi/percent-votes-service.js" class="app"></script>
   <script src="avUi/add-dots-to-int-service.js" class="app"></script>
+  <script src="avUi/endswith-service.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
