moving login/register to the new election public view infrastructure

--- a/avRegistration/login-controller/login-controller.html
+++ b/avRegistration/login-controller/login-controller.html
@@ -1,2 +1,6 @@
-<div av-login event-id="{{event_id}}" code="{{code}}" email="{{email}}">
+<div class="col-xs-12 top-section">
+  <div class="pad">
+    <div av-login event-id="{{event_id}}" code="{{code}}" email="{{email}}">
+    </div>
+  </div>
 </div>
