--- a/avRegistration/register-controller/register-controller.html
+++ b/avRegistration/register-controller/register-controller.html
@@ -1,2 +1,6 @@
-<div av-register event-id="{{event_id}}" code="{{code}}" email="{{email}}">
+<div class="col-xs-12 top-section">
+  <div class="pad">
+    <div av-register event-id="{{event_id}}" code="{{code}}" email="{{email}}">
+    </div>
+  </div>
 </div>
