--- a/avRegistration/register-directive/register-directive.html
+++ b/avRegistration/register-directive/register-directive.html
@@ -1,7 +1,6 @@
 <div class="container"> <div class="row">
-    <div class="col-sm-12 registerheader">
-        <h1>{{name}}</h1>
-        <h1 ng-i18next="avRegistration.registerHeader"></h1>
+    <div class="col-sm-12">
+        <h2 class="registerheader" ng-i18next="avRegistration.registerHeader"></h2>
     </div>
 
     <div class="col-sm-6">
@@ -26,9 +25,6 @@
     </div>
     <div class="col-sm-5 col-sm-offset-1 hidden-xs">
       <p>
-        <span ng-i18next="avRegistration.createElection"></span><br/>
-        <span ng-i18next="avRegistration.takeLook"></span>
-        <a href="" target="_blank" ng-i18next="avRegistration.step" tabindex="{{register_fields.length+2}}"></a>
       </p>
     </div>
   </div>
