--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
   <script src="avElection/layouts/simple-question-directive/simple-question-directive.js" class="app"></script>
   <script src="avElection/layouts/public-view-directive/public-view-directive.js" class="app"></script>
   <script src="avElection/layouts/election-links-directive/election-links-directive.js" class="app"></script>
+  <script src="avElection/authorities-directive/authorities-directive.js" class="app"></script>
 
   <!-- registration -->
   <script src="avRegistration/init.js" class="app"></script>
