removing not-yet- working links in booth

--- a/avBooth/success-screen-directive/success-screen-directive.html
+++ b/avBooth/success-screen-directive/success-screen-directive.html
@@ -39,7 +39,7 @@
       <p ng-i18next>
         [html:i18next]({ballotHash: stateData.ballotHash, ballotLocatorUrl: "#/election/" +election.id + "/public/ballot-locator"})avBooth.successBallotHash
       </p>
-      <p ng-i18next>avBooth.relatedLinksText</p>
+<!--      <p ng-i18next>avBooth.relatedLinksText</p>
       <ul>
         <li>
           <a href="#/election/{{election.id}}/public/view/faqs.html" target="_blank" ng-i18next>avElection.public.faqsLink</a>
@@ -52,7 +52,7 @@
         </li>
         <li>
           <a href="/election/{{election.id}}/public/view/tech_overview.pdf" target="_blank" ng-i18next>avElection.public.technicalOverviewLink</a>
-        </li>
+        </li>-->
       </ul>
       <div ng-bind-html="successText">
       </div>
