--- a/avBooth/help-screen-directive/help-screen-directive.html
+++ b/avBooth/help-screen-directive/help-screen-directive.html
@@ -33,7 +33,7 @@
       <div class="col-xs-12">
         <div ng-bind-html="helpInfo">
         </div>
-        <p ng-i18next>avBooth.relatedLinksText</p>
+<!--        <p ng-i18next>avBooth.relatedLinksText</p>
         <ul>
           <li>
             <a href="#/election/{{election.id}}/public/view/faqs.html" target="_blank" ng-i18next>avElection.public.faqsLink</a>
@@ -46,7 +46,7 @@
           </li>
           <li>
             <a href="/election/{{election.id}}/public/view/tech_overview.pdf" target="_blank" ng-i18next>avElection.public.technicalOverviewLink</a>
-          </li>
+          </li>-->
         </ul>
       </div>
     </div>
