improving login and register

--- a/avRegistration/fields/bool-field-directive/bool-field-directive.html
+++ b/avRegistration/fields/bool-field-directive/bool-field-directive.html
@@ -1,11 +1,5 @@
 <div class="form-group">
-    <label for="{{index}}Text" class="control-label col-sm-4">
-        <span>{{field.name}}</span>
-        <p class="help-block" ng-if="field.help">
-          {{field.help}}
-        </p>
-    </label>
-    <div class="col-sm-8">
+    <label class="control-label col-sm-4">
         <input
             type="checkbox"
             class="form-control"
@@ -15,6 +9,14 @@
             tabindex="{{index}}"
             autofocus
             ng-required={{field.required}} />
+    </label>
+    <div class="col-sm-8">
+        <label for="{{index}}Text">
+          <span>{{field.name}}</span>
+        </label>
+        <p class="help-block" ng-if="field.help">
+          {{field.help}}
+        </p>
         <div class="input-error">
         </div>
     </div>
