--- a/avRegistration/register-directive/register-directive.html
+++ b/avRegistration/register-directive/register-directive.html
@@ -1,8 +1,10 @@
-<div class="container"> <div class="row">
+<div class="container">
+  <div class="row">
     <div class="col-sm-12">
         <h2 class="registerheader" ng-i18next="avRegistration.registerHeader"></h2>
     </div>
-
+  </div>
+  <div class="row">
     <div class="col-sm-6">
         <form name="form" id="registerForm" role="form" class="form-horizontal">
             <div ng-repeat="field in register_fields" avr-field index="{{$index+1}}">
@@ -11,6 +13,14 @@
           <div class="col-sm-offset-4 col-sm-8 button-group">
               <div class="input-error">
                   <div class="error text-danger" ng-if="error">{{ error }}</div>
+              </div>
+              <div class="input-warn">
+                <span
+                  class="text-warning"
+                  ng-if="!form.$valid || sendingData"
+                  ng-i18next>
+                  avRegistration.fillValidFormText
+                </span>
               </div>
               <button
                 type="submit"
@@ -23,9 +33,9 @@
           </div>
         </form>
     </div>
-    <div class="col-sm-5 col-sm-offset-1 hidden-xs">
-      <p>
-      </p>
+    <div class="col-sm-5 col-sm-offset-1 help-sidebar hidden-xs">
+      <h3 class="help-h3" ng-i18next="avRegistration.registerFormHelpTitle"></h3>
+      <p ng-i18next>avRegistration.helpRegisterForm</p>
     </div>
   </div>
 </div>
