--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
   <!-- endof admin directives -->
 
   <script src="avAdmin/admin-service.js" class="app"></script>
+  <script src="avAdmin/admin-plugins.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
 
