--- a/avElection/results-directive/results-directive.html
+++ b/avElection/results-directive/results-directive.html
@@ -6,10 +6,10 @@
       <h1 ng-i18next="[i18next]({title: election.title})avElection.resultsHeader"></h1>
     </div>
   </div>
-  <div ng-if="electionState !== 'results_ok'">
+  <div ng-if="electionState !== 'results_pub'">
     <div ng-i18next="avElection.stateNotPublished"></div>
   </div>
-  <div ng-if="electionState === 'results_ok'">
+  <div ng-if="electionState === 'results_pub'">
     <div class="row">
       <div ng-class="{'col-xs-8': !noHeader, 'col-xs-12': noHeader}">
         <div ng-class="{'pull-left': !noHeader, 'text-center': noHeader}">
