Fixed plugin directive inclusion

--- a/avAdmin/admin-controller/admin-controller.html
+++ b/avAdmin/admin-controller/admin-controller.html
@@ -19,7 +19,8 @@
             <div av-admin-billinginfo ng-switch-when="admin.billinfo"></div>
             <div av-admin-billinghistory ng-switch-when="admin.billhistory"></div>
         </div>
-        <div id="content" class="col-sm-9" ng-repeat='template in ps' ng-include='template'></div>
+        <div id="content" class="col-sm-9" ng-repeat='template in plugins'
+             ng-include='template.name' ng-if="shortst == template.name"></div>
     </div>
 </div>
 
