add multiple election import support

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   <script src="avUi/add-dots-to-int-service.js" class="app"></script>
   <script src="avUi/endswith-service.js" class="app"></script>
   <script src="avUi/state-data-service.js" class="app"></script>
+  <script src="avUi/autoscroll-down-directive.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
@@ -140,7 +141,8 @@
   <script src="avRegistration/register-directive/register-directive.js" class="app"></script>
   <script src="avRegistration/validate-controller/validate-controller.js" class="app"></script>
   <script src="avRegistration/validate-directive/validate-directive.js" class="app"></script>
-  <script src="avRegistration/registration-service.js" class="app"></script>
+  <script src="avRegistration/patterns-service.js" class="app"></script>
+  <script src="avRegistration/auth-method-service.js" class="app"></script>
   <script src="avRegistration/field-directive/field-directive.js" class="app"></script>
   <script src="avRegistration/fields/email-field-directive/email-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/password-field-directive/password-field-directive.js" class="app"></script>
@@ -174,9 +176,10 @@
   <script src="avAdmin/admin-directives/billinghistory/billinghistory.js" class="app"></script>
   <script src="avAdmin/admin-directives/account/account.js" class="app"></script>
   <script src="avAdmin/admin-directives/import/import.js" class="app"></script>
+  <script src="avAdmin/import-service.js" class="app"></script>
   <!-- endof admin directives -->
 
-  <script src="avAdmin/admin-service.js" class="app"></script>
+  <script src="avAdmin/elections-api-service.js" class="app"></script>
   <script src="avAdmin/admin-plugins.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
