Plugin system more flexible

--- a/avAdmin/admin-sidebar-directive/admin-sidebar-directive.html
+++ b/avAdmin/admin-sidebar-directive/admin-sidebar-directive.html
@@ -23,9 +23,12 @@
 
   <!-- plugins -->
     <li role="presentation" ng-class="{active:state == 'admin.'+p.name, head:p.head, sub1:!p.head}" ng-repeat="p in plugins">
-      <a ui-sref="{{ 'admin.'+p.name+'({id:current.id})' }}">
-        <i class="fa-fw fa fa-{{ p.icon }}" ng-if="p.icon"></i>
-        <span ng-i18next>{{ p.text }}</span>
+      <a ui-sref="{{ p.link }}">
+        <span ng-if="p.menu.html" ng-bind-html="p.menu.html"></span>
+        <span ng-if="!p.menu.html">
+            <i class="fa-fw fa fa-{{ p.menu.icon }}" ng-if="p.menu.icon"></i>
+            <span ng-i18next>{{ p.menu.text }}</span>
+        </span>
       </a>
     </li>
   <!-- endof plugins -->
