fixing links colors and hover clicking in booth start screen

--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
       <h1>{{election.title}}</h1>
-      <p ng-bind-html="election.description"></p>
+      <p class="description" ng-bind-html="election.description"></p>
     </div>
   </div>
 </div>
