add target blank to description links in elections, using a filter

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   <script src="avUi/endswith-service.js" class="app"></script>
   <script src="avUi/state-data-service.js" class="app"></script>
   <script src="avUi/autoscroll-down-directive.js" class="app"></script>
+  <script src="avUi/add-target-blank-filter.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
   <script src="crypto/random-service.js" class="app"></script>
