fix bool label text align on registration

--- a/avRegistration/fields/bool-field-directive/bool-field-directive.html
+++ b/avRegistration/fields/bool-field-directive/bool-field-directive.html
@@ -11,7 +11,7 @@
             ng-required={{field.required}} />
     </label>
     <div class="col-sm-8">
-        <label for="{{index}}Text">
+        <label class="text-left" for="{{index}}Text">
           <span>{{field.name}}</span>
         </label>
         <p class="help-block" ng-if="field.help">
