improving look of the sidebar

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -3,6 +3,11 @@
 
     <p class="text-muted" ng-i18next>avAdmin.census.intro</p>
 
+    <h4 class="header-block">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span ng-i18next>avAdmin.census.configurationHeader</span>
+    </h4>
+
     <form role="form" class="form form-horizontal">
         <!-- Registration -->
         <div class="form-group">
