--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
   <script src="avAdmin/admin-controller/admin-controller.js" class="app"></script>
 
   <!-- admin directives -->
+  <script src="avAdmin/admin-directives/extra-field/extra-field.js" class="app"></script>
   <script src="avAdmin/admin-directives/elquestions/elquestions.js" class="app"></script>
   <script src="avAdmin/admin-directives/question/question.js" class="app"></script>
   <script src="avAdmin/admin-directives/eltally/eltally.js" class="app"></script>
