--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -70,36 +70,16 @@
           avAdmin.census.add
         </button>
 
-        <div class="extra-fields-wrapper">
-          <div av-extra-field ng-repeat="field in election.census.extra_fields">
+        <div class="extra-fields-wrapper disable-select" dnd-list="list">
+          <div
+            av-extra-field
+            ng-repeat="field in election.census.extra_fields"
+            dnd-draggable="field"
+            dnd-dragstart="console.log('Started to drag an item')"
+            dnd-moved="election.census.extra_fields.splice($index, 1); console.log('item moved')"
+            dnd-effect-allowed="move">
           </div>
         </div>
-        <!--
-        <div class="col-sm-10">
-            <p class="text-muted" ng-i18next>
-                avAdmin.census.fields.placeholder
-            </p>
-            <table class="table table-striped table-bordered">
-                <tr>
-                    <th ng-i18next>avAdmin.census.name</th>
-                    <th ng-i18next>avAdmin.census.required</th>
-                    <th></th>
-                </tr>
-                <tr ng-repeat="ef in election.census.extra_fields">
-                    <td width="100%">{{ ef.name }}</td>
-                    <td><input type="checkbox" class="form-control" ng-model="ef.required"/></td>
-                    <td><i class="fa fa-times" ng-click="delEf($index)" ng-if="!ef.must"></i></td>
-                </tr>
-            </table>
-
-            <div class="input-group">
-                  <input type="text" class="form-control" placeholder="" ng-model="newef.name" ng-enter="addEf()"/>
-                  <span class="input-group-btn">
-                    <button class="btn btn-success" type="button" ng-click="addEf()" ng-i18next>avAdmin.census.add</button>
-                  </span>
-            </div>
-        </div>
-        -->
     </form>
 
     <h4 class="header-block">
